--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
- 
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap">
   </head>
   <body style="width:100%;height:100%">
     <div class="container" style="width:100%;height:100%"></div>
 
 
-    <!-- 使用HtmlWebPackPlugin 的話 這邊就不用自己打 webpack會幫忙填入，自己打的話 會變載入兩次 bundle.js!-->
-  <!-- <script src="/bundle.js"></script> -->
 </body>
   
 
