--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
- 
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap">
   </head>
   <body style="width:100%;height:100%">
     <div class="container" style="width:100%;height:100%"></div>
 
 
-    <!-- 使用HtmlWebPackPlugin 的話 這邊就不用自己打 webpack會幫忙填入，自己打的話 會變載入兩次 bundle.js!-->
-  <!-- <script src="/bundle.js"></script> -->
-<script type="text/javascript" src="/hexSchool2019Week2_freecell/vendors~main.2ebb90c2f64914f030c9.js"></script><script type="text/javascript" src="/hexSchool2019Week2_freecell/main.67db9e42b786a1e52350.js"></script></body>
+<script type="text/javascript" src="/hexSchool2019Week2_freecell/vendors~main.c738476a58a88853be1e.js"></script><script type="text/javascript" src="/hexSchool2019Week2_freecell/main.219c9010f023f3296138.js"></script></body>
   
 
 
